# brain-indexer

./: .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  CHANGES.rst  CMakeLists.txt  MANIFEST.in  Makefile  README.md  README.txt  example_query.py  pylintrc  pyproject.toml  setup.cfg  setup.py  test_drt.py  tox.ini
.ci/: _run_examples.sh  _run_integration.sh  circuit_config-segments.sh  circuit_config-synapses.sh  run_mpi_pytest.sh  si_assert_indexes_are_equal.sh  si_datadir.sh  test_bluepy.py  test_circuit_config-circuit-1or2k.sh  test_circuit_config-circuit-2k.sh  test_circuit_config-segments-2k.sh  test_circuit_config-synapses-2k.sh  test_circuit_config-usecase1.sh  test_circuit_config-usecase2.sh  test_circuit_config-usecase3.sh  test_circuit_config-usecase4.sh  test_circuit_config-usecase5.sh  test_sonata_sanity.py  test_validation_FLAT.py
.github/workflows/: cache.yml  ctest.yml  integration.yml  main.yml  publish.yml  test.yml
CMake/: mpi_launcher.cmake  version.cmake
_benchmarking/: FLAT_seg_benchmark.py  FLAT_seg_benchmark.sh  FLAT_syn_benchmark.py  FLAT_syn_benchmark.sh  README.md  SI_seg_benchmark.py  SI_seg_benchmark.sh  SI_syn_benchmark.py  SI_syn_benchmark.sh  create_uniform_index.py  distribution.ipynb  example_query.py  example_synapses.py  segment_index_serial.py
_examples/: example_query.py
ci/manylinux2014_boost/: Dockerfile
docs/: accuracy.rst  api.rst  conf.py  conventions.rst  developer_guide.rst  flat.rst  index.rst  insertion.rst  installation.rst  intro.rst  memory_mapped_files.rst  morphology_conventions.rst  multi_index.rst  multi_population.rst  performance_tricks.rst  queries.rst  requirements.txt
examples/: advanced_tutorial.ipynb  basic_tutorial.ipynb  memory_map_index.py  memory_map_index.sh  memory_map_index_seg.py  memory_map_index_seg.sh  memory_map_index_syn.py  memory_map_index_syn.sh  run_ipynb.sh  segment_index.py  segment_index_sonata.py  segment_multi_index_sonata.py  spatial_index_circuit.sh  synapse_multi_index_sonata.py  synapses_index.py
include/brain_indexer/detail/: input_iterators.hpp
include/spatial_index/: bounding_box.hpp  common.hpp  distributed_analysis.hpp  distributed_sort_tile_recursion.hpp  distributed_sorting.hpp  entries.hpp  geometries.hpp  index.hpp  index_bulk_builder.hpp  index_grid.hpp  logging.hpp  meta_data.hpp  mpi_wrapper.hpp  multi_index.hpp  point3d.hpp  query_ordering.hpp  rtree_points.hpp  rtree_spheres.hpp  sort_tile_recursion.hpp  util.hpp  version.hpp
include/spatial_index/detail/: distributed_sort_tile_recursion.hpp  distributed_sorting.hpp  geometries.hpp  grid_common.hpp  grid_db.hpp  grid_placement.hpp  index.hpp  index_bulk_builder.hpp  index_grid.hpp  index_memdisk.hpp  input_iterators.hpp  mpi_wrapper.hpp  multi_index.hpp  output_iterators.hpp  result_iterators.hpp  sort_tile_recursion.hpp  util.hpp
python/: CMakeLists.txt  bind11_utils.hpp  bind_common.hpp  bind_point_rtree.cpp  bind_rtree.cpp  bind_rtree_soma.cpp  bind_sphere_rtree.cpp  bind_sphere_rtree2.cpp  bind_utils.cpp  bindings.cpp  distributed_analysis.hpp  index_grid.cpp  index_grid.hpp  py_bindings.cpp  rtree_index.cpp  rtree_index.hpp  spatial_index.cpp  spatial_index.hpp  spatial_index_common.hpp  test_clean.cpp
scripts/: ci_spack_test.sh  install_boost.sh  install_spatial_index.sh
spatial_index/: __init__.py  builder.py  chunked_builder.py  circuit_indexer.py  commands.py  experimental.py  index.py  index_circuit.py  index_common.py  io.py  logging_settings.py  morphology_builder.py  node_indexer.py  resolver.py  synapse_builder.py  synapse_indexer.py  synthetic_index.py  util.py  version.py
src/: CMakeLists.txt
src/brain_indexer/: commands.py
src/spatial_index/: CMakeLists.txt  __init__.py  builder.py  commands.py  io.py  logging_settings.py  mpi_wrapper.cpp  sort_tile_recursion.cpp  synapse_builder.py
tests/: BlueConfig  CMakeLists.txt  check_mpi_compatibility.py  conftest.py  test_bluepy.py  test_builder_api.py  test_grid.py  test_index.py  test_index_api.py  test_index_mvd.py  test_io.py  test_logging.py  test_morphology_loading.py  test_numpy_output.py  test_points_rtree.py  test_query_order.py  test_rtree_morph.py  test_rtree_point.py  test_rtree_soma.py  test_rtree_sphere.py  test_rtree_synapse.py  test_spheres_rtree.py  test_spheres_rtree2.py  test_synapse_indexer.py  test_util.py  test_validation_FLAT.py
tests/cpp/: benchmarks.cpp  test_clean.cpp  test_distributed_sort_tile_recursion.cpp  test_distributed_sorting.cpp  test_geometry.cpp  test_grid.cpp  test_input_iters.cpp  test_multi_index.cpp  test_query_ordering.cpp  test_random_trees.cpp  test_serial_sort_tile_recursion.cpp  test_shp.cpp  test_util.cpp  unit_tests.cpp
tests/cpp/check_headers/: CMakeLists.txt  distributed_analysis.cpp  distributed_sort_tile_recursion.cpp  distributed_sorting.cpp  geometries.cpp  index.cpp  logging.cpp  meta_data.cpp  mpi_wrapper.cpp  multi_index.cpp  point3d.cpp  sort_tile_recursion.cpp  util.cpp  version.cpp
tests/cpp/examples/: disk_mem_tree.cpp  test_clean.cpp  test_idx.cpp  test_pieces.cpp
tests/data/: ascii_sonata  circuit_mod.mvd3  edges_2k.h5  nodes.h5  query_2k_v6.csv  soma_extended.h5  soma_spherical.h5
