[metadata]
name = Spatial-Index
description = A Spatial Index implementation for spheres and morphologies
author = BlueBrain HPC
author-email = bbp-ou-hpc@epfl.ch
license = Blue Brain Project Licence
url = https://bbpcode.epfl.ch/code/#/admin/projects/hpc/SpatialIndex
project_urls =
    Source = ssh://leite@bbpcode.epfl.ch/hpc/SpatialIndex
# maintainer is the field chosen for docs `contributors`
maintainer = Fernando Pereira


# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: C++14
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Framework :: Boost
    Framework :: PyBind11
    Topic :: Scientific/Engineering
    License :: Other/Proprietary License


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
formats = bdist_wheel

[aliases]
test = pytest

[tool:pytest]
# py.test options when running `python setup.py test`
addopts = tests -v

[flake8]
ignore = D203, E241, E226, E128, E124, E731
exclude = 3rdparty, .eggs, .tox, build, docs, include, venv
max-complexity = 10
max-line-length = 90
