[metadata]
name = Spatial-Index
description = A Spatial Index implementation for spheres, morphologies and synapses
author = BlueBrain HPC
author_email = bbp-ou-hpc@epfl.ch
license = Blue Brain Project Licence
url = https://bbpgitlab.epfl.ch/hpc/SpatialIndex
project_urls =
    Source = ssh://git@bbpgitlab.epfl.ch:hpc/SpatialIndex.git
    Tracker = https://bbpteam.epfl.ch/project/issues/projects/SPIND
# maintainer is the field chosen for docs `contributors`
maintainer = Fernando Pereira, Antonio Bellotta, Luc Dominic Grosheintz-Laval


# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: C++14
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Framework :: Boost
    Framework :: PyBind11
    Topic :: Scientific/Engineering
    License :: Other/Proprietary License


[files]
# Add here 'data_files', 'packages' or 'namespace_packages'.
# Additional data files are defined as key value pairs of target directory

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
formats = bdist_wheel

[aliases]
test = pytest

[tool:pytest]
# py.test options when running `python setup.py test`. Append "-s' to avoid stdout capture
addopts = tests -v

[flake8]
# W503 is wrong per new pep8 directives.
# E221 Allow aligned assignments.
# C901 unreasonable if-complexity rule.
ignore = W503, E221, C901
per-file-ignores =
    test_rtree_sphere.py:E241
exclude = 3rdparty, .eggs, .tox, build, docs, include, venv, _benchmarking
max-complexity = 10
max-line-length = 90
